--- a/views/check.html
+++ b/views/check.html
@@ -7,19 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>北京市广渠门中学志愿活动管理</title>
-    <link href="/css/semantic.min.css" rel="stylesheet">
+    <link href="css/semantic.min.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- Fixed navbar -->
     <div class="ui violet inverted top fixed menu">
         <div class="item">
-            <img src="/images/logo.png">
+            <img src="image/logo.png">
         </div>
         <a class="item">北京市广渠门中心志愿活动管理</a>
         <div class="right menu" style="padding-right: 20px">
             <a class="item" class="active" href="/teacher">主页</a>
-            <a class="item" href="/exit">退出登录</a>
+            <a class="item" href="/message/exit">退出登录</a>
         </div>
     </div>
     <br />
@@ -65,6 +65,8 @@
                 </tr>
             </tbody>
         </table>
+        <br/>
+        <br/>
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
         <script src="/js/jquery.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -93,8 +95,10 @@
                             }
                         })
                             .then(response => {
-                                this.classes = response.data;
-                                this.classes.push("全年级")
+                                if (response.data.Message === "成功！"){
+                                    this.classes = response.data.Data;
+                                    this.classes.push("全年级")
+                                }
                             })
                             .catch(function (error) {
                                 checkError(error);
@@ -111,7 +115,9 @@
                             }
                         })
                             .then(response => {
-                                this.students = response.data;
+                                if (response.data.Message === "成功！"){
+                                    this.students = response.data.Data;
+                                }
                             })
                             .catch(function (error) {
                                 checkError(error);
