--- a/views/collect.html
+++ b/views/collect.html
@@ -8,28 +8,24 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>北京市广渠门中学志愿活动管理</title>
     <!-- Bootstrap -->
-    <link href="/css/semantic.min.css" rel="stylesheet">
-    <script src="/js/api.js">
+    <link href="css/semantic.min.css" rel="stylesheet">
+    <script src="js/Api/api.js">
 
     </script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
     <!-- Fixed navbar -->
     <div class="ui violet inverted top fixed menu">
         <div class="item">
-            <img src="/images/logo.png">
+            <img src="image/logo.png">
         </div>
         <a class="item">北京市广渠门中心志愿活动管理</a>
         <div class="right menu" style="padding-right: 20px">
             <a class="item" class="active" href="/teacher">主页</a>
-            <a class="item" href="/exit">退出登录</a>
+            <a class="item" href="/message/exit">退出登录</a>
         </div>
     </div>
     <br />
@@ -88,8 +84,8 @@
     <script src="/js/vue.js"></script>
     <script src="/js/axios.min.js"></script>
     <script>
-        let getactivitiesurl = '/message/teacher/Cactivities';
-        let getactivityurl = '/message/teacher/Cactivity';
+        let getactivitiesurl = '/message/teacher/activities';
+        let getactivityurl = '/message/teacher/activity';
         var activities = new Vue({
             el: '#activities',
             mounted: function () {
@@ -97,12 +93,18 @@
             },
             methods: {
                 getActivities: function () {
-                    axios.get(getactivitiesurl)
+                    axios.get(getactivitiesurl,{
+                        params:{
+                            status:"end"
+                        }
+                    })
                         .then(response => {
-                            this.activitie = response.data;
-                            this.activity = this.activitie[0]
-                            this.isActive = this.activity.Id
-                            this.getActivity();
+                            if (response.data.Message === "成功！"){
+                                this.activitie = response.data.Data;
+                                this.activity = this.activitie[0]
+                                this.isActive = this.activity.Id
+                                this.getActivity();
+                            }
                         }).catch(function (error) {
                             checkError(error);
                         });
@@ -114,8 +116,10 @@
                         }
                     })
                         .then(response => {
-                            this.jions = response.data;
-                            this.image = JSON.parse(this.activity.ImagePath);
+                            if (response.data.Message === "成功！"){
+                                this.jions = response.data.Data;
+                                this.image = JSON.parse(this.activity.ImagePath);
+                            }
                         })
                         .catch(function (error) {
                             checkError(error);
