--- a/views/login.html
+++ b/views/login.html
@@ -9,28 +9,24 @@
     <!-- Site Properties -->
     <title>北京市广渠门中学志愿活动管理</title>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="/js/jquery.min.js"></script>
+    <script src="js/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="/js/vue.js"></script>
-    <script src="/js/axios.min.js"></script>
-    <script src="/js/semantic.min.js"></script>
-    <script src="/js/api.js"></script>
-    <link href="/css/semantic.min.css" rel="stylesheet">
+    <script src="js/vue.js"></script>
+    <script src="js/axios.min.js"></script>
+    <script src="js/semantic.min.js"></script>
+    <script src="js/Api/api.js" type="module"></script>
+    <link href="css/semantic.min.css" rel="stylesheet">
     <style type="text/css">
     body {
-        background-image: url(/images/background.jpg);
+        background-image: url(image/background.jpg);
         background-size: 100%;
         overflow: hidden;
     }
-    
+
     body > .grid {
         height: 100%;
     }
-    
-    .image {
-        margin-top: -100px;
-    }
-    
+
     .column {
         max-width: 450px;
     }
