--- a/views/student.html
+++ b/views/student.html
@@ -8,185 +8,195 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>北京市广渠门中学志愿活动管理</title>
     <!-- Bootstrap -->
-    <link href="/css/semantic.min.css" rel="stylesheet">
+    <link href="css/semantic.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="ui blue inverted top fixed menu">
-        <div class="item">
-            <img src="/images/logo.png">
-        </div>
-        <a class="item">北京市广渠门中心志愿活动管理</a>
-        <div class="right menu" style="padding-right: 20px">
-            <a class="item" onclick="changemodal()">修改密码</a>
-            <a class="item" href="/exit">退出登录</a>
-        </div>
+<div class="ui blue inverted top fixed menu">
+    <div class="item">
+        <img src="image/logo.png">
     </div>
-    <br />
-    <br />
-    <br />
-    <br />
-    <div class="ui container" id="activity">
-        <h2 class="ui header">个人信息:</h2>
-        <div class="ui segment">
-            <div class="ui list">
-                <div class="item">
-                    <i class="student icon"></i>
-                    <div class="content">教育ID：
-                        <<<.stu.Id>>></div>
-                </div>
-                <div class="item">
-                    <i class="user icon"></i>
-                    <div class="content">姓名：
-                        <<<.stu.Name>>></div>
-                </div>
-                <div class="item">
-                    <i class="male icon"></i>
-                    <div class="content">性别：
-                        <<<.stu.Gender>>></div>
-                </div>
-                <div class="item">
-                    <i class="university icon"></i>
-                    <div class="content">年级：
-                        <<<.stu.Grade>>></div>
-                </div>
-                <div class="item">
-                    <i class="unordered list icon"></i>
-                    <div class="content">班级：
-                        <<<.stu.Class>>></div>
-                </div>
-            </div>
-        </div>
-        <h2 class="ui header">活动综述：</h2>
-        <div class="ui segment">
-            <table class="ui orange table ">
-                <thead>
-                    <th>#</th>
-                    <th>时间</th>
-                    <th>活动名称</th>
-                    <th>报名状态</th>
-                </thead>
-                <tbody>
-                    <tr v-if="canjia===null">
-                        <td>您还没有参加活动！！！
-                            <td></td>
-                            <tr v-else v-for="(can,index) in canjia">
-                                <td>{{index + 1}}</td>
-                                <td>{{can.Date}} </td>
-                                <td>{{can.Name}}</td>
-                                <td>{{can.Status}}</td>
-                            </tr>
-                </tbody>
-            </table>
-        </div>
-        <activity message="团委"></activity>
-        <activity message="年级"></activity>
-        <activity message="班级"></activity>
+    <a class="item">北京市广渠门中心志愿活动管理</a>
+    <div class="right menu" style="padding-right: 20px">
+        <a class="item" onclick="changemodal()">修改密码</a>
+        <a class="item" href="/message/exit">退出登录</a>
     </div>
-    <div class="ui small modal" id="change">
-        <i class="close icon"></i>
-        <div class="header">
-            修改密码
-        </div>
-        <div class="ui form content">
-            <div v-show="message!==''" class="ui ignore info message">
-                <strong>warning!</strong> {{message}}
+</div>
+<br/>
+<br/>
+<br/>
+<br/>
+<div class="ui container" id="activity">
+    <h2 class="ui header">个人信息:</h2>
+    <div class="ui segment">
+        <div class="ui list">
+            <div class="item">
+                <i class="student icon"></i>
+                <div class="content">教育ID：
+                    <<<.stu.Id>>>
+                </div>
             </div>
-            <div class="inline field">
-                <label>原密码</label>
-                <input type="password" v-model="password">
+            <div class="item">
+                <i class="user icon"></i>
+                <div class="content">姓名：
+                    <<<.stu.Name>>>
+                </div>
             </div>
-            <div class="inline field">
-                <label>新密码</label>
-                <input type="password" v-model="newpassword">
+            <div class="item">
+                <i class="male icon"></i>
+                <div class="content">性别：
+                    <<<.stu.Gender>>>
+                </div>
             </div>
-            <div class="inline field">
-                <label>重复密码</label>
-                <input type="password" v-model="repeatpassword">
+            <div class="item">
+                <i class="university icon"></i>
+                <div class="content">年级：
+                    <<<.stu.Grade>>>
+                </div>
             </div>
-        </div>
-        <div class="actions">
-            <div class="ui black deny button">
-                关闭
-            </div>
-            <div class="ui positive right labeled icon button">
-                确定
-                <i class="checkmark icon"></i>
+            <div class="item">
+                <i class="unordered list icon"></i>
+                <div class="content">班级：
+                    <<<.stu.Class>>>
+                </div>
             </div>
         </div>
     </div>
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/vue.js"></script>
-    <script src="/js/axios.min.js"></script>
-    <script src="/js/semantic.min.js"></script>
-    <script type="text/javascript">
-        let rooturl = '/message/student/root';
-        let classurl = '/message/student/class';
-        let gradeurl = '/message/student/grade';
-        let setjionurl = '/message/student/jion';
-        let canjiaurl = '/message/student/canjia';
-        let changerul = '/message/student/change';
-        Vue.component('activity', {
-            props: ['message'],
-            mounted: function () {
-                if (this.message === "团委") {
-                    this.url = rooturl;
-                    this.id = "root";
-                } else if (this.message === "年级") {
-                    this.url = gradeurl;
-                    this.id = "grade";
-                } else if (this.message === "班级") {
-                    this.url = classurl;
-                    this.id = "class";
-                }
-                this.getActivities();
-            },
-            data: function () {
-                return {
-                    id: '',
-                    activities: [],
-                    activity: {},
-                    isActive: '',
-                    mess: '',
-                    url: '',
-                }
-            },
-            methods: {
-                setJion: function () {
-                    axios.get(setjionurl, {
-                        params: {
-                            activity_id: this.activity.Id,
-                        }
+    <h2 class="ui header">活动综述：</h2>
+    <div class="ui segment">
+        <table class="ui orange table ">
+            <thead>
+            <th>#</th>
+            <th>时间</th>
+            <th>活动名称</th>
+            <th>发起人</th>
+            <th>报名状态</th>
+            </thead>
+            <tbody>
+            <tr v-if="canjia===null">
+                <td>您还没有参加活动！！！
+                <td></td>
+            <tr v-else v-for="(can,index) in canjia">
+                <td>{{index + 1}}</td>
+                <td>{{can.Date}}</td>
+                <td>{{can.Name}}</td>
+                <td>{{can.WhoBuild}}</td>
+                <td>{{can.Status}}</td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <activity id="root"></activity>
+    <activity id="grade"></activity>
+    <activity id="class"></activity>
+</div>
+<div class="ui small modal" id="change">
+    <i class="close icon"></i>
+    <div class="header">
+        修改密码
+    </div>
+    <div class="ui form content">
+        <div v-show="message!==''" class="ui ignore info message">
+            <strong>warning!</strong> {{message}}
+        </div>
+        <div class="inline field">
+            <label>原密码</label>
+            <input type="password" v-model="password">
+        </div>
+        <div class="inline field">
+            <label>新密码</label>
+            <input type="password" v-model="newpassword">
+        </div>
+        <div class="inline field">
+            <label>重复密码</label>
+            <input type="password" v-model="repeatpassword">
+        </div>
+    </div>
+    <div class="actions">
+        <div class="ui black deny button">
+            关闭
+        </div>
+        <div class="ui positive right labeled icon button">
+            确定
+            <i class="checkmark icon"></i>
+        </div>
+    </div>
+</div>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/vue.js"></script>
+<script src="/js/axios.min.js"></script>
+<script src="/js/semantic.min.js"></script>
+<script src="/js/Api/api.js"></script>
+<script type="text/javascript">
+    const activityurl = '/message/student/activity';
+    const setjionurl = '/message/student/jion';
+    const canjiaurl = '/message/student/canjia';
+    const changerul = '/message/student/change';
+    Vue.component('activity', {
+        props: ['id'],
+        mounted: function () {
+            this.getActivities();
+        },
+        data: function () {
+            return {
+                activities: [],
+                activity: {},
+                isActive: '',
+                mess: '',
+                Message: {},
+            }
+        },
+        methods: {
+            setJion: function () {
+                axios.get(setjionurl, {
+                    params: {
+                        activity_id: this.activity.Id,
+                        message: JSON.stringify(this.Message)
+                    }
+                })
+                    .then(response => {
+                        this.mess = response.data.Message;
+                        $('#' + this.id).dimmer('show');
+                        activity.getCanjia();
                     })
-                        .then(response => {
-                            this.mess = response.data;
-                            $('#' + this.id).dimmer('show');
-                            activity.getCanjia();
-                        })
-                        .catch(error => {
-                            checkError(error);
-                        })
-                },
-                getActivities: function () {
-                    axios.get(this.url)
-                        .then(response => {
-                            this.activities = response.data;
+                    .catch(error => {
+                        checkError(error);
+                    })
+            },
+            getActivities: function () {
+                axios.get(activityurl,{
+                    params:{
+                        who:this.id,
+                    }
+                })
+                    .then(response => {
+                        if (response.data.Message === "成功！") {
+                            this.activities = response.data.Data;
                             if (this.activities.length !== 0) {
                                 this.activity = this.activities[0];
                                 this.isActive = this.activity.Id
                             }
-                        }).catch(function (error) {
-                            checkError(error);
-                        });
-                },
-                active: function (a) {
-                    if (this.isActive !== a.Id) {
-                        this.isActive = a.Id;
-                        this.activity = a;
-                    }
-                },
+
+                        }
+
+                    }).catch(function (error) {
+                    checkError(error);
+                });
             },
-            template: `
+            active: function (a) {
+                if (this.isActive !== a.Id) {
+                    this.isActive = a.Id;
+                    this.activity = a;
+                    this.Message = {};
+                    let m = JSON.parse(a.Message)
+                    for (let x of m){
+                        this.Message[x] = '';
+                    }
+                }
+                console.log(Object.keys(this.Message))
+            },
+        },
+        template: `
         <div class="ui container">
                 <h2 class="ui header">{{message}}活动：</h2>
             <div v-if="activities.length!==0" v-bind:id="id">
@@ -197,6 +207,12 @@
                     <h2 class="ui center aligned header">{{activity.Name}}</h2>
                     <h3 class="ui center aligned header">活动时间：{{activity.Date}}</h3>
                     <xmp> {{activity.Introduction}}</xmp>
+                    <div class="ui form content" v-if="Message.length != 0">
+                        <div class="inline field" v-for="(value, key) of Message">
+                            <label>{{key}}</label>
+                            <input v-model="Message[key]">
+                        </div>
+                    </div>
                 </div>
                 <div class="ui green  bottom attached button" tabindex="0" @click="setJion">报名此活动</div>
                 <div class="ui dimmer">
@@ -218,85 +234,86 @@
             <br>
             <br>
         </div>`
-        })
+    })
 
-        var activity = new Vue({
-            el: '#activity',
-            mounted: function () {
-                this.getCanjia();
+    let activity = new Vue({
+        el: '#activity',
+        mounted: function () {
+            this.getCanjia();
 
-            },
-            data: function () {
-                return {
-                    canjia: [],
-                }
-            },
-            methods: {
-                getCanjia: function () {
-                    axios.get(canjiaurl)
-                        .then(response => {
-                            this.canjia = response.data
-                        })
-                        .catch(error => {
-                            checkError(error);
-                        })
-                },
+        },
+        data: function () {
+            return {
+                canjia: [],
             }
-        })
-
-        var change = new Vue({
-            el: '#change',
-            data: function () {
-                return {
-                    password: '',
-                    newpassword: '',
-                    repeatpassword: '',
-                    message: '',
-                }
-            },
-            methods: {
-                change: function () {
-                    if (this.password === '') {
-                        this.message = "请输入原密码！"
-                    } else if (this.newpassword.length < 6) {
-                        this.message = '请输入6位以上的密码！'
-                    } else if (this.newpassword !== this.repeatpassword) {
-                        this.message = '两次输入密码不正确！';
-                        return;
-                    }
-                    axios.get(changerul, {
-                        params: {
-                            password: this.password,
-                            newpassword: this.newpassword,
+        },
+        methods: {
+            getCanjia: function () {
+                axios.get(canjiaurl)
+                    .then(response => {
+                        if (response.data.Message === "成功！") {
+                            this.canjia = response.data.Data
                         }
                     })
-                        .then(response => {
-                            if (response.data === "修改成功") {
-                                $('#change').modal("hide");
-                                this.message = ''
-                            } else {
-                                this.message = response.data;
-                            }
-                        })
-                        .catch(error => {
-                            checkError(error);
-                        })
+                    .catch(error => {
+                        checkError(error);
+                    })
+            },
+        }
+    })
+
+    new Vue({
+        el: '#change',
+        data: function () {
+            return {
+                password: '',
+                newpassword: '',
+                repeatpassword: '',
+                message: '',
+            }
+        },
+        methods: {
+            change: function () {
+                if (this.password === '') {
+                    this.message = "请输入原密码！"
+                } else if (this.newpassword.length < 6) {
+                    this.message = '请输入6位以上的密码！'
+                } else if (this.newpassword !== this.repeatpassword) {
+                    this.message = '两次输入密码不正确！';
+                    return;
                 }
+                axios.get(changerul, {
+                    params: {
+                        password: this.password,
+                        newpassword: this.newpassword,
+                    }
+                })
+                    .then(response => {
+                        if (response.data.Message === "修改成功") {
+                            $('#change').modal("hide");
+                            this.message = ''
+                        } else {
+                            this.message = response.data.Message;
+                        }
+                    })
+                    .catch(error => {
+                        checkError(error);
+                    })
+            }
+        }
+    })
+
+    function changemodal() {
+        $('#change').modal({
+            closable: false,
+            onApprove: function () {
+                change.change();
+                return false;
             }
         })
-    </script>
-    <script type="text/javascript">
-        function changemodal() {
-            $('#change').modal({
-                closable: false,
-                onApprove: function () {
-                    change.change();
-                    return false;
-                }
-            })
-                .modal('show')
-        }
-    </script>
+            .modal('show')
+    }
+</script>
 </body>
 
 </html>
